fixe header z-index

--- a/wp-content/themes/html5blank-stable/css/photomaniax.scss
+++ b/wp-content/themes/html5blank-stable/css/photomaniax.scss
@@ -167,7 +167,7 @@ input:focus {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000000;
+  z-index: 10000;
   background-color: black;
   a,.fa,.btn {
     line-height: 75px;
